fix: Improve image alignment.

--- a/themes/kelpie/sass/blocks/_images.scss
+++ b/themes/kelpie/sass/blocks/_images.scss
@@ -4,6 +4,7 @@
 
 .wp-block-image {
 	@include content-block();
+	display: block;
 	margin-bottom: get($spacing, 'm');
 	margin-top: get($spacing, 'm');
 	text-align: center;
