--- a/themes/kelpie/style.css
+++ b/themes/kelpie/style.css
@@ -3124,6 +3124,7 @@ ol {
 .wp-block-image {
   margin: 0 auto 2.4rem;
   max-width: 56rem;
+  display: block;
   margin-bottom: 3.2rem;
   margin-top: 3.2rem;
   text-align: center; }
